force-app/main/default/objects/CF_Evaluation_Template__c/CF_Evaluation_Template__c.object-meta.xml
<CustomObject>
    <label>Evaluation Template</label>
    <nameField>
        <displayFormat>ETN-{000000}</displayFormat>
        <label>Evaluation Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>