force-app/main/default/objects/CF_Evaluation_Template__c/fields/CF_Call_Result__c.field-meta.xml
<CustomField>
    <fullName>CF_Call_Result__c</fullName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>