force-app/main/default/objects/CF_Evaluation_Template__c/fields/CF_Max_Score__c.field-meta.xml
<CustomField>
    <fullName>CF_Max_Score__c</fullName>
    <label>Max Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>