force-app/main/default/objects/CF_Evaluation_Template__c/fields/CF_Name__c.field-meta.xml
<CustomField>
    <fullName>CF_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>