force-app/main/default/objects/CF_Evaluation_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CF_Call_Type__c</columns>
    <columns>CF_Call_Result__c</columns>
    <columns>CF_Max_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>